# pyringdown

./: README.md  pyproject.toml
examples/: _make_example_data.py  fit_ringdown.py  segment_analysis.py
src/pyringdown/: plot.py  utility.py
src/pyringdown/inference/: common.py  small_angle.py
src/pyringdown/waveform/: small_angle.py
